# ean13-barcode-recognition

./: README.md  Readme.md
Qt工程文件/: .gitignore  CMakeLists.txt
Qt工程文件/barcode/: barcode.pro  barcode_recog.cpp  barcode_recog.h  detect.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  whatFU.pro  whatFU.pro.user.aace2a8.2.7pre1
Qt工程文件/barcode-build-Desktop_Qt_5_0_1_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
Qt工程文件/barcode-build-Desktop_Qt_5_0_1_MinGW_32bit-Debug/debug/: moc_mainwindow.cpp
Qt工程文件/build-whatFU-桌面-Debug/: Makefile  moc_mainwindow.cpp  ui_mainwindow.h  whatFU
